llvm-toolchain-snapshot (1:12~++20200804122259+4be13b15d69-1~exp1) UNRELEASED; urgency=medium

  [ Sylvestre Ledru ]
  * Install omp.h in instead of /usr/lib/llvm-@LLVM_VERSION@/lib/clang/@LLVM_VERSION_FULL@/include/
    instead of /usr/lib/llvm-@LLVM_VERSION@/include/openmp/omp
  * Install split-file in llvm-X-tools (like lit)

  [ John Paul Adrian Glaubitz ]
  * Link against libatomic on mipsel to fix FTBFS in stage2
  * Link against libatomic on powerpc to fix FTBFS in stage2
  * Use dh-exec to exclude lib/libPolly*.a on powerpc and
    powerpcspe from libclang-common-X.Y-dev.install.in

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 04 Aug 2020 12:26:34 +0200

llvm-toolchain-snapshot (1:12~++20200715052739+d6e79e3dd6d-1~exp1) experimental; urgency=medium

  [ Sylvestre Ledru ]
  * Snapshot is now -12

  [ Samuel Thibault ]
  * debian/patches/hurd/hurd-EIEIO-undef.diff: Remove, upstreamed.
  * debian/patches/hurd/hurd-cxx-paths.diff: Remove, upstreamed.

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 08 Jul 2020 15:19:14 +0200

llvm-toolchain-11 (1:11.0.0~+rc2-5) unstable; urgency=medium

  [ John Paul Adrian Glaubitz ]
  * Link against libatomic on powerpc to fix FTBFS in stage2
  * Use dh-exec to exclude lib/libPolly*.a on powerpc and
    powerpcspe from libclang-common-X.Y-dev.install.in

  [ Gianfranco Costamagna ]
  * autopkgtests: ignore binfmts enable command return value.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Mon, 31 Aug 2020 12:26:58 +0200

llvm-toolchain-11 (1:11.0.0~+rc2-4) unstable; urgency=medium

  * integration-test-suite-test: change the configuration for 11

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 28 Aug 2020 23:08:33 +0200

llvm-toolchain-11 (1:11.0.0~+rc2-3) unstable; urgency=medium

  * Fix testsuite by ignoring binfmts test
    (can't be enabled on autopkgtests)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 28 Aug 2020 21:56:49 +0200

llvm-toolchain-11 (1:11.0.0~+rc2-2) unstable; urgency=medium
